[package]
name = "rusttalk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
eframe = "0.33.3"
iroh = "0.96.1"
iroh-gossip = "0.96.0"
parking_lot = "0.12.5"
rand = "0.10.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
wincode = "0.4.1"
wincode-derive = "0.4.0"
