[package]
name = "rusttalk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
eframe = "0.33.3"
iroh = "0.96.1"
iroh-gossip = "0.96.0"
loro = "1.10.3"
parking_lot = "0.12.5"
postcard = "1.1.3"
rand = "0.10.0"
serde = "1.0.228"
serde_derive = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
